data/derived/sp14/progs/unify/prog1781.ml.out
Characters 64-65:
  if b then wwhile f a else a;;
                   ^
Error: This expression has type 'a -> 'b * bool
       but an expression was expected of type ('a -> 'b * bool) * 'a
